--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Material Design</string>
     <string name="action_search">搜索</string>
     <string name="action_settings">设置</string>
+    <string name="action_share">分享</string>
     <string name="drawer_close">关闭</string>
     <string name="drawer_open">打开</string>
     <string name="nav_item_friends">朋友</string>
