--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
 
     <string name="action_search">Search</string>
 
+    <string name="action_share">Share</string>
+
     <string name="drawer_open">Open</string>
 
     <string name="drawer_close">Close</string>
